# stock-management-webapplication

./: .replit  README.md  main.py  package-lock.json  package.json  pyproject.toml  seed.py  start.sh
.agents/: agent_assets_metadata.toml
backend/app/: auth.py  config.py  main.py  models.py  schemas.py
backend/app/routers/: auth.py  categories.py  customers.py  dashboard.py  invoices.py  orders.py  products.py
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.tsx  index.css
frontend/src/components/: Sidebar.tsx
frontend/src/contexts/: AuthContext.tsx
frontend/src/pages/: Customers.tsx  Dashboard.tsx  Inventory.tsx  Invoices.tsx  Login.tsx  Orders.tsx
scripts/: post-merge.sh
